Bug 46445 - [SNB] sna/kgem.c:1071: __kgem_bo_destroy: Assertion `bo->flush == 0' failed
Summary: [SNB] sna/kgem.c:1071: __kgem_bo_destroy: Assertion `bo->flush == 0' failed
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Daniel Vetter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-22 05:37 UTC by Da Fox
Modified: 2017-07-24 23:02 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Logged output after running X with the intel-driver compiled with full debugging (661.27 KB, application/x-7z-compressed)
2012-02-22 05:37 UTC, Da Fox
no flags Details

Description Da Fox 2012-02-22 05:37:09 UTC
Created attachment 57458 [details]
Logged output after running X with the intel-driver compiled with full debugging

The following assertion now triggers when going fullscreen in mplayer when using '-vo gl':

src/sna/kgem.c:1071: __kgem_bo_destroy: Assertion `bo->flush == 0' failed.

Software versions:
Mesa: 6e738d35c5c88769ececbadd5f4ac14d36647168
xf86-video-intel: b02f866d67d60538368619849f2acda4c1706476 (with sna).

My hardware is a Dell XPS 15 (L502x) laptop with:
00:02.0 VGA compatible controller: Intel Corporation Device 0116 (rev 09)
[    13.803] (II) intel(0): Integrated Graphics Chipset: Intel(R) Sandybridge
Mobile (GT2)

NOTE: I built mplayer from the mplayer-vaapi repository, but I didn't use any of the vaapi-features, just the gl output driver.
Comment 1 Chris Wilson 2012-02-22 05:46:01 UTC
commit 71512b2438e06b2bd256aff3657797152fbef38e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Feb 22 13:44:24 2012 +0000

    sna: Clear the flush flag on release of scanout/dri
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=46445
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.