sna: Clear the flush flag on release of scanout/dri

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=46445
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>